aks/manifests/shared/backend/notifications-gateway-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: notifications-gateway-ingress
spec:
  podSelector:
    matchLabels:
      app: notifications-microservice
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: apigateway
      ports:
        - protocol: TCP
          port: 8080
